--- a/Exercises/Exercise-5/docker-compose.yml
+++ b/Exercises/Exercise-5/docker-compose.yml
@@ -1,30 +1,33 @@
-version: "3.9"
+version: "3.10.11"
 services:
-    postgres:
-      image: postgres:10.5
-      restart: always
-      environment:
-        - POSTGRES_USER=postgres
-        - POSTGRES_PASSWORD=postgres
-      ports:
-        - '5432:5432'
-      volumes:
-        - ./postgres-data:/var/lib/postgresql/data
-      healthcheck:
-        test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-        interval: 5s
-        timeout: 5s
-        retries: 5
-    test:
-      image: "exercise-5"
-      volumes:
-        - .:/app
-      command: python3 -m pytest
-    run:
-      image: "exercise-5"
-      depends_on:
-        postgres:
-          condition: service_healthy
-      volumes:
-        - .:/app
-      command: python3 main.py
+  postgres:
+    image: postgres:latest
+    container_name: exercise5_postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  app:
+    build:
+      context: .
+    container_name: exercise5_app
+    depends_on:
+      - postgres
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: python3 main.py
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_NAME=postgres
+      - DB_USER=postgres
+      - DB_PASSWORD=password
+
+volumes:
+  postgres_data:
