--- a/Exercises/Exercise-5/requirements.txt
+++ b/Exercises/Exercise-5/requirements.txt
@@ -1,1 +1,4 @@
-psycopg2
+psycopg2      # Thư viện để kết nối với PostgreSQL
+pandas        # Thư viện để xử lý dữ liệu CSV
+numpy        # Thư viện hỗ trợ tính toán số liệu
+pytest   # Thư viện để kiểm thử
